Bug 1167816 - Do not treat anchor element without href attribute an interactive content. r=smaug